--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,6 @@ version: '3.9'
 
 services:
   web:
-    image: harshsoni777/my-todo-app:latest
+    image: miteshsaste/my-todo-app:latest
     ports:
       - "8000:8000"
